--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ a {
  margin-right: 40px;
  text-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  position: relative;
+ text-transform: uppercase;
 }
 .app nav ul li a::after {
  content: "";
