--- a/css/contact.css
+++ b/css/contact.css
@@ -1,19 +1,20 @@
 .app {
  position: relative;
- height: 100vh;
+ min-height: 100vh;
  overflow: hidden;
  background-image: url(../images/contact-bg.jpeg);
  background-size: cover;
 }
 .app nav {
  position: relative;
+ top: 0;
 }
 .app .contact-form {
  position: absolute;
  right: 5%;
  width: 50%;
  background-color: #fff;
- height: 80%;
+ min-height: 80%;
  border-radius: 20px;
  padding: 25px;
 }
@@ -67,7 +68,7 @@
  border-radius: 10px;
  font-size: 20px;
  border: 1px solid #e2e2e2;
- color: rgba(0, 0, 0, 0.6);
+ color: rgba(0, 0, 0, 0.7);
  background-color: transparent;
  cursor: pointer;
  transition: 0.3s;
@@ -115,4 +116,30 @@
 }
 .app .contact-form > p {
  margin: 20px 0 0 15px;
+}
+/* Media */
+@media (max-width: 1000px) {
+ .app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 30px;
+ }
+ .app .contact-form {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 81%;
+  min-height: 85%;
+ }
+}
+@media (max-width: 600px) {
+ .app .contact-form .contact-footer .box {
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+ }
+ .app .contact-form .contact-footer .box i {
+  margin-right: 5px;
+ }
 }
